--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "appwrite": "^18.1.1",
     "framer-motion": "^12.16.0",
     "html-react-parser": "^5.2.5",
+    "lucide-react": "^0.514.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.4",
