--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tailwindcss/vite": "^4.1.8",
     "@tinymce/tinymce-react": "^6.2.1",
     "appwrite": "^18.1.1",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.16.0",
     "html-react-parser": "^5.2.5",
     "lucide-react": "^0.514.0",
